// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: AFP - con horas extras (10h y 11h en dos días) 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 307.94,
  "afp_comision": 45.27,
  "afp_prima": 53.58,
  "afp_seguro": 53.58,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 270,
  "bonif_nocturna_base": 0,
  "bonificacion_nocturna": 0,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 3000,
  "cts_ingreso": 0,
  "cts_monto": 0,
  "cts_periodo": 0,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 2,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 277.15,
  "feriado_trabajado": 0,
  "grat_base": 3000,
  "grat_trunca": 0,
  "gratificacion_ingreso": 0,
  "gratificacion_monto": 0,
  "haber_mensual": 3000,
  "he_25_estructura": 15.63,
  "he_35_estructura": 16.88,
  "horas_8": 28,
  "horas_extras": 79.4,
  "horas_extras_25": 62.52,
  "horas_extras_35": 16.88,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 0,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 2672.61,
  "neto_pagar": 2672.61,
  "observaciones": "",
  "onp": 0,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 3000,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 0,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 3000,
  "rem_computable_afp": 3079.4,
  "rem_computable_cts": 3500,
  "rem_computable_gratificacion": 3000,
  "rem_computable_renta": 3079.4,
  "rem_computable_vacaciones": 3000,
  "remuneracion_afecta": 3079.4,
  "remuneracion_vacacional": 0,
  "renta_5ta": 0,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 500,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 3000,
  "sueldo_neto_estructura": 3000,
  "sueldo_nocturno": 0,
  "sueldo_proporcional": 3000,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 293.47,
  "total_beneficios_sociales": 0,
  "total_descuentos": 406.79,
  "total_descuentos_ley": 406.79,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 3079.4,
  "total_ingresos": 3079.4,
  "total_ingresos_afectos": 3079.4,
  "total_ingresos_no_afectos": 0,
  "total_sueldo_estructura": 3000,
  "treintavo_diario": 100,
  "turno_dia": 30,
  "turno_noche": 0,
  "vac_base": 3000,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 16.32,
}
`;

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: AFP - gratificación julio + bonificación 30334 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 300,
  "afp_comision": 44.1,
  "afp_prima": 52.2,
  "afp_seguro": 52.2,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 270,
  "bonif_nocturna_base": 0,
  "bonificacion_nocturna": 0,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 3000,
  "cts_ingreso": 0,
  "cts_monto": 0,
  "cts_periodo": 0,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 0,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 270,
  "feriado_trabajado": 0,
  "grat_base": 3000,
  "grat_trunca": 0,
  "gratificacion_ingreso": 3270,
  "gratificacion_monto": 3000,
  "haber_mensual": 3000,
  "he_25_estructura": 15.63,
  "he_35_estructura": 16.88,
  "horas_8": 30,
  "horas_extras": 0,
  "horas_extras_25": 0,
  "horas_extras_35": 0,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 0,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 5827.03,
  "neto_pagar": 5827.03,
  "observaciones": "",
  "onp": 0,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 3000,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 46.67,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 3000,
  "rem_computable_afp": 3000,
  "rem_computable_cts": 3500,
  "rem_computable_gratificacion": 3000,
  "rem_computable_renta": 3000,
  "rem_computable_vacaciones": 3000,
  "remuneracion_afecta": 3000,
  "remuneracion_vacacional": 0,
  "renta_5ta": 46.67,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 500,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 3000,
  "sueldo_neto_estructura": 3000,
  "sueldo_nocturno": 0,
  "sueldo_proporcional": 3000,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 285.9,
  "total_beneficios_sociales": 0,
  "total_descuentos": 442.97,
  "total_descuentos_ley": 442.97,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 6270,
  "total_ingresos": 6270,
  "total_ingresos_afectos": 3000,
  "total_ingresos_no_afectos": 3270,
  "total_sueldo_estructura": 3000,
  "treintavo_diario": 100,
  "turno_dia": 30,
  "turno_noche": 0,
  "vac_base": 3000,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 15.9,
}
`;

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: AFP - mes regular, sueldo base, sin extras 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 300,
  "afp_comision": 44.1,
  "afp_prima": 52.2,
  "afp_seguro": 52.2,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 270,
  "bonif_nocturna_base": 0,
  "bonificacion_nocturna": 0,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 3000,
  "cts_ingreso": 0,
  "cts_monto": 0,
  "cts_periodo": 0,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 0,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 270,
  "feriado_trabajado": 0,
  "grat_base": 3000,
  "grat_trunca": 0,
  "gratificacion_ingreso": 0,
  "gratificacion_monto": 0,
  "haber_mensual": 3000,
  "he_25_estructura": 15.63,
  "he_35_estructura": 16.88,
  "horas_8": 30,
  "horas_extras": 0,
  "horas_extras_25": 0,
  "horas_extras_35": 0,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 0,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 2603.7,
  "neto_pagar": 2603.7,
  "observaciones": "",
  "onp": 0,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 3000,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 0,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 3000,
  "rem_computable_afp": 3000,
  "rem_computable_cts": 3500,
  "rem_computable_gratificacion": 3000,
  "rem_computable_renta": 3000,
  "rem_computable_vacaciones": 3000,
  "remuneracion_afecta": 3000,
  "remuneracion_vacacional": 0,
  "renta_5ta": 0,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 500,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 3000,
  "sueldo_neto_estructura": 3000,
  "sueldo_nocturno": 0,
  "sueldo_proporcional": 3000,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 285.9,
  "total_beneficios_sociales": 0,
  "total_descuentos": 396.3,
  "total_descuentos_ley": 396.3,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 3000,
  "total_ingresos": 3000,
  "total_ingresos_afectos": 3000,
  "total_ingresos_no_afectos": 0,
  "total_sueldo_estructura": 3000,
  "treintavo_diario": 100,
  "turno_dia": 30,
  "turno_noche": 0,
  "vac_base": 3000,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 15.9,
}
`;

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: AFP - renta 5ta (sueldo alto sobre 7 UIT) 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 1200,
  "afp_comision": 176.4,
  "afp_prima": 208.8,
  "afp_seguro": 208.8,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 1080,
  "bonif_nocturna_base": 0,
  "bonificacion_nocturna": 0,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 12000,
  "cts_ingreso": 0,
  "cts_monto": 0,
  "cts_periodo": 0,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 0,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 1080,
  "feriado_trabajado": 0,
  "grat_base": 12000,
  "grat_trunca": 0,
  "gratificacion_ingreso": 0,
  "gratificacion_monto": 0,
  "haber_mensual": 12000,
  "he_25_estructura": 62.5,
  "he_35_estructura": 67.5,
  "horas_8": 30,
  "horas_extras": 0,
  "horas_extras_25": 0,
  "horas_extras_35": 0,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 0,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 8992.72,
  "neto_pagar": 8992.72,
  "observaciones": "",
  "onp": 0,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 12000,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 1422.08,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 12000,
  "rem_computable_afp": 12000,
  "rem_computable_cts": 14000,
  "rem_computable_gratificacion": 12000,
  "rem_computable_renta": 12000,
  "rem_computable_vacaciones": 12000,
  "remuneracion_afecta": 12000,
  "remuneracion_vacacional": 0,
  "renta_5ta": 1422.08,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 2000,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 12000,
  "sueldo_neto_estructura": 12000,
  "sueldo_nocturno": 0,
  "sueldo_proporcional": 12000,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 1143.6,
  "total_beneficios_sociales": 0,
  "total_descuentos": 3007.28,
  "total_descuentos_ley": 3007.28,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 12000,
  "total_ingresos": 12000,
  "total_ingresos_afectos": 12000,
  "total_ingresos_no_afectos": 0,
  "total_sueldo_estructura": 12000,
  "treintavo_diario": 400,
  "turno_dia": 30,
  "turno_noche": 0,
  "vac_base": 12000,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 63.6,
}
`;

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: ONP - CTS noviembre (depósito semestral) 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 0,
  "afp_comision": 0,
  "afp_prima": 0,
  "afp_seguro": 0,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 270,
  "bonif_nocturna_base": 0,
  "bonificacion_nocturna": 0,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 3000,
  "cts_ingreso": 1750,
  "cts_monto": 1750,
  "cts_periodo": 1750,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 0,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 270,
  "feriado_trabajado": 0,
  "grat_base": 3000,
  "grat_trunca": 0,
  "gratificacion_ingreso": 0,
  "gratificacion_monto": 0,
  "haber_mensual": 3000,
  "he_25_estructura": 15.63,
  "he_35_estructura": 16.88,
  "horas_8": 30,
  "horas_extras": 0,
  "horas_extras_25": 0,
  "horas_extras_35": 0,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 6,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 4340,
  "neto_pagar": 4340,
  "observaciones": "",
  "onp": 390,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 3000,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 20,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 3000,
  "rem_computable_afp": 3000,
  "rem_computable_cts": 3500,
  "rem_computable_gratificacion": 3000,
  "rem_computable_renta": 3000,
  "rem_computable_vacaciones": 3000,
  "remuneracion_afecta": 3000,
  "remuneracion_vacacional": 0,
  "renta_5ta": 20,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 500,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 3000,
  "sueldo_neto_estructura": 3000,
  "sueldo_nocturno": 0,
  "sueldo_proporcional": 3000,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 285.9,
  "total_beneficios_sociales": 0,
  "total_descuentos": 410,
  "total_descuentos_ley": 410,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 4750,
  "total_ingresos": 4750,
  "total_ingresos_afectos": 3000,
  "total_ingresos_no_afectos": 1750,
  "total_sueldo_estructura": 3000,
  "treintavo_diario": 100,
  "turno_dia": 30,
  "turno_noche": 0,
  "vac_base": 3000,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 15.9,
}
`;

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: ONP - jornada nocturna (sobretasa 35%) 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 0,
  "afp_comision": 0,
  "afp_prima": 0,
  "afp_seguro": 0,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 225,
  "bonif_nocturna_base": 29.17,
  "bonificacion_nocturna": 875.1,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 2500,
  "cts_ingreso": 0,
  "cts_monto": 0,
  "cts_periodo": 0,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 0,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 303.76,
  "feriado_trabajado": 0,
  "grat_base": 2500,
  "grat_trunca": 0,
  "gratificacion_ingreso": 0,
  "gratificacion_monto": 0,
  "haber_mensual": 2500,
  "he_25_estructura": 13.02,
  "he_35_estructura": 14.06,
  "horas_8": 30,
  "horas_extras": 0,
  "horas_extras_25": 0,
  "horas_extras_35": 0,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 0,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 2920.33,
  "neto_pagar": 2920.33,
  "observaciones": "",
  "onp": 438.76,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 2500,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 16.01,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 2500,
  "rem_computable_afp": 3375.1,
  "rem_computable_cts": 2916.67,
  "rem_computable_gratificacion": 2500,
  "rem_computable_renta": 3375.1,
  "rem_computable_vacaciones": 2500,
  "remuneracion_afecta": 3375.1,
  "remuneracion_vacacional": 0,
  "renta_5ta": 16.01,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 416.67,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 2500,
  "sueldo_neto_estructura": 2500,
  "sueldo_nocturno": 875.1,
  "sueldo_proporcional": 2500,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 321.65,
  "total_beneficios_sociales": 0,
  "total_descuentos": 454.77,
  "total_descuentos_ley": 454.77,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 3375.1,
  "total_ingresos": 3375.1,
  "total_ingresos_afectos": 3375.1,
  "total_ingresos_no_afectos": 0,
  "total_sueldo_estructura": 2500,
  "treintavo_diario": 83.33,
  "turno_dia": 0,
  "turno_noche": 30,
  "vac_base": 2500,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 17.89,
}
`;

exports[`calcularEmpleado - golden/parity net (GENERAL) snapshot estable: ONP - mes regular, sueldo base, sin extras 1`] = `
{
  "adelanto_cts": 0,
  "adelanto_gratificacion": 0,
  "adelanto_quincena": 0,
  "adelanto_vacacional": 0,
  "adelantos": 0,
  "afp_aporte": 0,
  "afp_comision": 0,
  "afp_prima": 0,
  "afp_seguro": 0,
  "asig_fam_cliente_base": 0,
  "asignacion_cliente": 0,
  "asignacion_familiar": 0,
  "bonif_extraordinaria": 180,
  "bonif_nocturna_base": 0,
  "bonificacion_nocturna": 0,
  "bonificaciones": 0,
  "bono_armado_base": 0,
  "bono_armado_ingreso": 0,
  "bono_armado_monto": 0,
  "bono_desempeno_base": 0,
  "bono_desempeno_monto": 0,
  "bono_movilidad_base": 0,
  "bono_productividad_base": 0,
  "bono_productividad_monto": 0,
  "bono_referido": 0,
  "bono_refrigerio_base": 0,
  "bonos_modulo": 0,
  "cantidad_feriados": 0,
  "compensacion_vacacional": 0,
  "cts_base": 2000,
  "cts_ingreso": 0,
  "cts_monto": 0,
  "cts_periodo": 0,
  "cts_trunca": 0,
  "descanso_medico_monto": 0,
  "descanso_trabajado_monto": 0,
  "descuento_faltas": 0,
  "descuento_feriado": 0,
  "descuento_permisos": 0,
  "descuento_reintegro": 0,
  "descuento_sobregiro": 0,
  "descuento_tardanzas": 0,
  "dias_cesado_no_lab": 0,
  "dias_cts": 0,
  "dias_descanso_medico": 0,
  "dias_descanso_trabajado": 0,
  "dias_falta": 0,
  "dias_falta_justificada": 0,
  "dias_feriado_no_trabajado": 0,
  "dias_horas_extra": 0,
  "dias_licencia_con_goce": 0,
  "dias_licencia_fallecimiento": 0,
  "dias_licencia_paternidad": 0,
  "dias_licencia_sin_goce": 0,
  "dias_no_laborados": 0,
  "dias_nuevo_no_lab": 0,
  "dias_pegada": 0,
  "dias_permiso": 0,
  "dias_retenido": 0,
  "dias_sin_cobertura": 0,
  "dias_subsidio": 0,
  "dias_subsidio_incapacidad": 0,
  "dias_subsidio_maternidad": 0,
  "dias_suspension": 0,
  "dias_trabajados": 30,
  "dias_vacaciones": 0,
  "diferencia_estructura": 0,
  "essalud": 0,
  "essalud_empleador": 180,
  "feriado_trabajado": 0,
  "grat_base": 2000,
  "grat_trunca": 0,
  "gratificacion_ingreso": 0,
  "gratificacion_monto": 0,
  "haber_mensual": 2000,
  "he_25_estructura": 10.42,
  "he_35_estructura": 11.25,
  "horas_8": 30,
  "horas_extras": 0,
  "horas_extras_25": 0,
  "horas_extras_35": 0,
  "ingreso_sobregiro": 0,
  "licencia_goce_monto": 0,
  "meses_cts": 0,
  "minutos_tardanza": 0,
  "movilidad": 0,
  "neto_mes": 1740,
  "neto_pagar": 1740,
  "observaciones": "",
  "onp": 260,
  "otros_adelantos": 0,
  "otros_descuentos": 0,
  "otros_ingresos": 0,
  "pasaje_especial": 0,
  "pegada_reenganche": 0,
  "por_dias_trab": 2000,
  "prestamo": 0,
  "prestamos": 0,
  "promedio_comisiones": 0,
  "promedio_horas_extras": 0,
  "quinta_categoria": 0,
  "refrigerio": 0,
  "reintegro_dias_trab": 0,
  "reintegro_inafecto": 0,
  "rem_basica": 2000,
  "rem_computable_afp": 2000,
  "rem_computable_cts": 2333.33,
  "rem_computable_gratificacion": 2000,
  "rem_computable_renta": 2000,
  "rem_computable_vacaciones": 2000,
  "remuneracion_afecta": 2000,
  "remuneracion_vacacional": 0,
  "renta_5ta": 0,
  "retencion_judicial": 0,
  "sctr": 0,
  "sctr_pension_empleador": 0,
  "sctr_salud_empleador": 0,
  "sexto_gratificacion": 333.33,
  "subsidio_incapacidad": 0,
  "subsidio_maternidad": 0,
  "sueldo_base": 2000,
  "sueldo_neto_estructura": 2000,
  "sueldo_nocturno": 0,
  "sueldo_proporcional": 2000,
  "tiene_adelanto_quincenal": false,
  "total_aportes_empleador": 190.6,
  "total_beneficios_sociales": 0,
  "total_descuentos": 260,
  "total_descuentos_ley": 260,
  "total_descuentos_otros": 0,
  "total_dias": 30,
  "total_haberes": 2000,
  "total_ingresos": 2000,
  "total_ingresos_afectos": 2000,
  "total_ingresos_no_afectos": 0,
  "total_sueldo_estructura": 2000,
  "treintavo_diario": 66.67,
  "turno_dia": 30,
  "turno_noche": 0,
  "vac_base": 2000,
  "vac_truncas": 0,
  "vacaciones_ingreso": 0,
  "venta_vacaciones": 0,
  "vida_ley_empleador": 10.6,
}
`;
